# Hardware_SO101

./: README.md  test.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_cool_robot_bringup_package/share/my_cool_robot_bringup_package/: local_setup.bash  local_setup.dsv  local_setup.sh  (+7 more)
log/: latest_build  latest_test  latest_test-result
src/my_cool_robot_bringup_package/: CMakeLists.txt  package.xml
src/my_cool_robot_bringup_package/launch/: my_cool_robot_name.launch.py  my_cool_robot_name.launch.xml  test_forward_position_controller.launch.py  test_forward_position_controller.launch.xml  test_joint_trajectory_controller.launch.py  test_joint_trajectory_controller.launch.xml
src/my_cool_robot_control_package/: CMakeLists.txt  my_cool_robot_control_package.xml
src/my_cool_robot_control_package/src/: my_cool_robot_hardware.cpp
src/my_cool_robot_control_package/test/: test_my_cool_robot_hardware.cpp
src/my_cool_robot_control_package/work/: FeetechMotorsBus.cpp  FeetechMotorsBus.hpp  MotorBus.cpp  MotorsBus.hpp  SO101.cpp  SO101.hpp  SetupPort.cpp  SetupPort.hpp  errors.hpp  group_sync_read.cpp  group_sync_read.hpp  port_handler.cpp  port_handler.hpp  port_handler_2.cpp  port_handler_2.hpp  protocol_packet_handler.hpp  scservo_def.hpp  so101_ros2_pub.cpp  so101_ros2_pub.hpp  tables.cpp  tables.hpp
src/my_cool_robot_controller_package/: CMakeLists.txt  my_cool_robot_controller_package.xml  package.xml
src/my_cool_robot_controller_package/include/my_cool_robot_controller_package/: my_controller_file.hpp  validate_my_controller_file_parameters.hpp
src/my_cool_robot_controller_package/src/: my_controller_file.cpp  my_controller_file.yaml
src/my_cool_robot_controller_package/test/: my_controller_file_params.yaml  my_controller_file_preceeding_params.yaml  test_load_my_controller_file.cpp  test_my_controller_file.cpp  test_my_controller_file.hpp  test_my_controller_file_preceeding.cpp
src/my_cool_robot_description_package/: CMakeLists.txt  README.md
src/my_cool_robot_description_package/launch/: my_cool_robot_name.launch.xml
src/my_cool_robot_description_package/test/: my_cool_robot_name_test_urdf_xacro.py
src/my_cool_robot_description_package/urdf/: my_cool_robot_name.urdf.xacro
src/my_test_package/: package.xml  setup.py
src/my_test_package/launch/: so101_publisher_launch.py
src/my_test_package/my_test_package/: so101_ros2_pub.py
src/my_test_package_pub_cpp/: CMakeLists.txt  package.xml
src/my_test_package_pub_cpp/src/: main.cpp  sauv.txt  so101.cpp  so101_ros2_pub.cpp
(+101 files in other folders)
